k8s/voting-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: voting-api-deployment
spec:
  selector:
    matchLabels:
      app: voting-api
  template:
    metadata:
      labels:
        app: voting-api
    spec:
      containers:
      - name: voting-api
        image: benny0329/voting-api
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
        ports:
        - containerPort: 3000
