k8s/poll-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: poll-api
spec:
  selector:
    app: poll-api
  ports:
  - port: 3000
    targetPort: 3000
