k8s/voting-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: voting-api
spec:
  selector:
    app: voting-api
  ports:
  - port: 3000
    targetPort: 3000
