k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - host: poll-api.io
    http:
      paths:
      - pathType: Prefix
        path: /api/?(.*)
        backend:
          service:
            name: poll-api
            port: 
              number: 3000
